--- a/src/BlazorDatasheet.Wasm/wwwroot/index.html
+++ b/src/BlazorDatasheet.Wasm/wwwroot/index.html
@@ -23,6 +23,8 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/BlazorDatasheet/blazor-datasheet.js" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.7.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.7.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
